2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/atk-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* glib-checks.ac: 
	* defs-checks.ac: Versioned pkg-config check.

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.

2004-09-19  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (libgw_guile_gnome_atk_la_LIBADD): Not
	G_WRAP_LINK_ARGS, it's G_WRAP_LIBS.

2004-09-16  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (SUBDIRS): Dist fixes.

	* AUTHORS: Added.

	* NEWS: Added.

	* README: Added.

	* gnome/Makefile.am: Dist atk.scm.

	* gnome/atk.scm: Added.

2004-09-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am: Don't dist the C file.

	* gnome/gw/atk-spec.scm: Fixes for module name changes.

	* defs-checks.ac: Added.

	* glib-checks.ac: Fixed.

2004-06-13  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/atk-spec.scm: Use #:dependencies instead of
	depends-on!.

	* ChangeLog: All changelogs have been merged, and the entries that
	don't deal with the ATK wrapper have been elided. Directories were
	corrected.

2003-11-25  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gtk/gw-atk-spec.scm: Use gw-standard instead of
	guile-gnome-gw-standard.

2003-05-03  Andy Wingo  <wingo@pobox.com>

	* *: Completely rewritten, see the release notes (0.5.0) for
	details.