@@ -1,0 +1,7 @@
+include $(top_srcdir)/common.mk
+
+moduledir = $(guilemoduledir)/overrides
+
+module_DATA = $(wildcard *.defs*)
+
+EXTRA_DIST = $(module_DATA)
